# ats-skills

./: README.md
algorithm-packaging/: .gitignore  README.md  SKILL.md
algorithm-packaging/docx-reference/: experiment-report-reference.docx
algorithm-packaging/scripts/: build_docs.py
algorithm-packaging/template/: .dockerignore  pyproject.toml
algorithm-packaging/template/docs/: {算法编号}_原始实验运行数据及测试报告.md
ats-algorithm-cover/: README.md  SKILL.md
ats-algorithm-cover/agents/: openai.yaml
ats-algorithm-cover/assets/: cover.html
ats-algorithm-cover/scripts/: render_cover.py
ats-algorithm-doc-generation/: README.md  SKILL.md
ats-algorithm-doc-generation/template/docs/: {算法编号}_原始实验运行数据及测试报告.md
ats-algorithm-packaging/: README.md  SKILL.md
ats-algorithm-packaging/agents/: openai.yaml
ats-algorithm-packaging/scripts/: build_docs.py
ats-algorithm-packaging/template/: Dockerfile
ats-algorithm-packaging/template/docs/: {算法编号}_原始实验运行数据及测试报告.md
skills/ats-algorithm-cover/: SKILL.md
skills/ats-algorithm-cover/assets/: cover.html
skills/ats-algorithm-doc-generation/: SKILL.md
skills/ats-algorithm-doc-generation/scripts/: build_docs.py
skills/ats-algorithm-packaging/: README.md
